* allow saving games during battles (sgb)

* shift click on a unit to select all units in the territory (sgb)

* rename attatchment to attachment (sgb)

* remove singleton image factories, move to UIContext (sgb)

* when retreating from a sea zone, if a fighter has no movement, the fighter gets a 1 movement bonus (sgb)

* battleships can only bombard if they are in a sea zone where transports unloaded (sgb)

* fix bug [ 1277099 ] map refresh problems undoing move with captured aa gun (sgb)

* Japanese victory points for a&a pacific (Adam_J)

changes for 0.7.1

* updated readme and user docs (George_H)

* if we have multiple transports that unloaded troops to an amphibious assault, then the transports 
  retreat from a  naval battle that precedes the amphibious assault, then too many units will retreat (sgb)

* various no pop up movement bugs (sgb)

* fixed chinese tech in big world 1942 map (sgb)

* fixed missing connection from solomon in pacific map (sgb)

* fixed bug [ 1259381 ] Bid purchasing (sgb)

* fixed no pop up movement for scaled units (sgb)

* removed territory attatchments for sea zones in big world map (sgb)

* Fixed missing connections in big world map, north to south brazil, and sea of Okhotsk to West Bering Sea (kc1189)

* More email validation (Adam_J)

* Chinese infantry mechanism added for a&a pacific (Adam_J)

* Convoy Zones implemented (Adam_J)

* Add code for marines (Adam_J)

* Add code in for kamikaze (Adam_J)

* fix bug located http://maddlinks.com/triplea/index.php?showtopic=707 (Adam Jette)

Changes for 0.7.0

* add movement help to help menu (sgb)

* remove hints menu (sgb)

* movement now done without pop up dialogs  (sgb, lnxduk)

* only allow transports to unload units to 1 territory  (sgb)

* fixed bug [ 1238910 ] PBEM mode cannot accept subdomains  (sgb)

* add "click" to select casualties button, many users are confused and dont know to click to select casualties  (sgb)
